--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,54 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CalPom - あなたの学習と集中を可視化</title>
+
+    <!-- 🔶 Google AdSense広告タグ -->
+    <meta name="google-adsense-account" content="ca-pub-6649229111325272" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6649229111325272"
+      crossorigin="anonymous"
+    ></script>
+
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="CalPom は学習計画とポモドーロ集中法を組み合わせた無料カレンダーアプリです。"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-    <meta name="google-adsense-account" content="ca-pub-6649229111325272" />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <header>
+      <h1>CalPom( ー カルポム ー )</h1>
+      <nav>
+        <a href="/about.html">このアプリについて</a> |
+        <a href="/privacy.html">プライバシーポリシー</a> |
+        <a href="/terms.html">利用規約</a>
+      </nav>
+    </header>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <main>
+      <p>
+        CalPomは、あなたの学習を自動で分割し、カレンダーに反映できるアプリです。ポモドーロ法で集中しながら、目標達成をサポートします。
+      </p>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+      <!-- 🔶 広告枠（バナー） -->
+      <ins
+        class="adsbygoogle"
+        style="display: block"
+        data-ad-client="ca-pub-6649229111325272"
+        data-ad-slot="2545599027"
+        data-ad-format="auto"
+        data-full-width-responsive="true"
+      ></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </main>
+
+    <footer>
+      <p>&copy; 2025 CalPom</p>
+    </footer>
   </body>
 </html>
