構成見直し、ルーティング見直し

--- a/public/index.html
+++ b/public/index.html
@@ -19,36 +19,9 @@
     />
   </head>
   <body>
-    <header>
-      <h1>CalPom( ー カルポム ー )</h1>
-      <nav>
-        <a href="/about.html">このアプリについて</a> |
-        <a href="/privacy.html">プライバシーポリシー</a> |
-        <a href="/terms.html">利用規約</a>
-      </nav>
-    </header>
+    <!-- ✅ Reactアプリの描画先 -->
+    <div id="root"></div>
 
-    <main>
-      <p>
-        CalPomは、あなたの学習を自動で分割し、カレンダーに反映できるアプリです。ポモドーロ法で集中しながら、目標達成をサポートします。
-      </p>
-
-      <!-- 🔶 広告枠（バナー） -->
-      <ins
-        class="adsbygoogle"
-        style="display: block"
-        data-ad-client="ca-pub-6649229111325272"
-        data-ad-slot="2545599027"
-        data-ad-format="auto"
-        data-full-width-responsive="true"
-      ></ins>
-      <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </main>
-
-    <footer>
-      <p>&copy; 2025 CalPom</p>
-    </footer>
+    <!-- CRAビルド済みスクリプトがここに差し込まれる -->
   </body>
 </html>
