--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,20 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6649229111325272"
       crossorigin="anonymous"
     ></script>
+    <!-- Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-K3CQRYRT0D"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-K3CQRYRT0D");
+    </script>
 
     <meta
       name="description"
