--- a/public/how-to-use.html
+++ b/public/how-to-use.html
@@ -8,85 +8,64 @@
       content="CalPom はカレンダーとポモドーロを組み合わせた無料の学習管理アプリです。ログインからポモドーロ実績までの使い方を紹介します。"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-6649229111325272" />
     <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6649229111325272"
       crossorigin="anonymous"
     ></script>
-
-    <!-- TailwindなどCDNで最低限のスタイル -->
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
   </head>
-  <body class="bg-white text-gray-800 px-4 py-8">
-    <main class="max-w-3xl mx-auto">
+  <body class="bg-white text-gray-800">
+    <header class="bg-blue-600 text-white py-4 px-6">
+      <div class="max-w-5xl mx-auto flex justify-between items-center">
+        <h1 class="text-xl font-bold">CalPom</h1>
+        <nav class="space-x-4">
+          <a href="./landingPage.html" class="hover:underline">トップ</a>
+          <a href="./blog/BlogArticle1.html" class="hover:underline">ブログ</a>
+          <a
+            href="/"
+            class="bg-white text-blue-600 px-3 py-1 rounded hover:bg-gray-100"
+            >アプリへ</a
+          >
+        </nav>
+      </div>
+    </header>
+
+    <main class="max-w-3xl mx-auto px-4 py-10">
       <h1 class="text-3xl font-bold mb-6">CalPom の使い方</h1>
-      <p class="mb-8">
-        CalPom は、学習や仕事に取り組む方に向けた、無料の時間管理アプリです。<br />
-        カレンダー機能とポモドーロタイマーを融合し、効率よく計画を立てて集中力を高める仕組みを提供します。<br /><br />
-
-        本アプリでは、直感的に使えるカレンダー画面で予定をドラッグ＆ドロップして管理できるほか、ポモドーロタイマーを使って集中した作業時間を記録することができます。<br />
-        また、記録した作業時間はカレンダー上に蓄積され、どのくらい集中して学習・仕事をこなしたかを日別・週別で可視化できるようになっています。<br /><br />
-
-        さらに、今後のアップデートでは、目標から逆算した AI
-        による学習計画の自動生成機能も搭載予定です。たとえば資格試験や受験勉強などで、「合格までに何を・いつまでに・どのペースで取り組むべきか」を自動で割り出し、カレンダーに予定として追加することが可能になります。<br /><br />
-
-        CalPom
-        の特徴は、単なるスケジュール帳としての機能にとどまらず、「集中力」や「学習実績」といった目に見えにくい努力の記録を可視化し、日々の成長を実感できる点にあります。ポモドーロ法を活用することで、時間の浪費を防ぎ、短時間で効率的に成果を出すことが可能です。<br /><br />
-
-        初めて使う方でもわかりやすいように、本ページではアプリの基本的な使い方をステップごとに解説しています。ログインから予定の追加、タイマーの使用方法、学習実績の確認まで、画像つきで紹介していますので、ぜひ参考にしてください。
+      <p class="mb-8 text-gray-700">
+        CalPom は学習と集中力を支援するWebアプリです。<br />
+        本ページではログインから実績確認までの基本的な流れを紹介します。
       </p>
 
-      <!-- 広告 1 -->
-      <div class="my-8 text-center">
-        <ins
-          class="adsbygoogle"
-          style="display: block"
-          data-ad-client="ca-pub-6649229111325272"
-          data-ad-slot="2545599027"
-          data-ad-format="auto"
-          data-full-width-responsive="true"
-        ></ins>
-        <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-      </div>
-
       <section class="mb-10">
-        <h2 class="text-xl font-semibold mb-2">1. ログイン画面</h2>
-        <p class="mb-2">
-          メールアドレスでログインして、あなた専用のデータを管理できます。
+        <h2 class="text-xl font-semibold mb-2">1. ログイン</h2>
+        <p class="mb-4">
+          メールアドレスでログインすることで、あなたのデータが安全に保存されます。
         </p>
         <img
           src="/img/login-screen.png"
           alt="ログイン画面"
           class="rounded shadow w-full mb-6"
         />
-        <img
-          src="/img/main-calendar.png"
-          alt="メイン画面"
-          class="rounded shadow w-full mb-6"
-        />
       </section>
 
       <section class="mb-10">
-        <h2 class="text-xl font-semibold mb-2">
-          2. カレンダーイベント追加画面
-        </h2>
-        <p class="mb-2">左下のボタンから予定を追加できます。</p>
+        <h2 class="text-xl font-semibold mb-2">2. カレンダーで予定管理</h2>
+        <p class="mb-4">
+          予定はカレンダー上で直接追加・編集・ドラッグ操作が可能です。
+        </p>
         <img
           src="/img/event-screen.png"
-          alt="カレンダー画面"
+          alt="予定追加画面"
           class="rounded shadow w-full mb-6"
         />
       </section>
 
-      <!-- 広告 2 -->
       <div class="my-8 text-center">
         <ins
           class="adsbygoogle"
@@ -102,21 +81,21 @@
       </div>
 
       <section class="mb-10">
-        <h2 class="text-xl font-semibold mb-2">3. ポモドーロタイマー</h2>
-        <p class="mb-2">
-          予定をクリックしてから右下のトマトアイコンから起動。集中タイムをスタートして、実績を記録しよう！
+        <h2 class="text-xl font-semibold mb-2">3. ポモドーロで集中</h2>
+        <p class="mb-4">
+          トマトアイコンからポモドーロタイマーを起動し、集中タイムを記録しましょう。
         </p>
         <img
           src="/img/pomodoro-screen.png"
-          alt="ポモドーロタイマー"
+          alt="ポモドーロ画面"
           class="rounded shadow w-full mb-6"
         />
       </section>
 
       <section class="mb-10">
-        <h2 class="text-xl font-semibold mb-2">4. 学習実績の確認</h2>
-        <p class="mb-2">
-          カレンダーや統計ページから、あなたの集中記録を確認できます。
+        <h2 class="text-xl font-semibold mb-2">4. 実績の可視化</h2>
+        <p class="mb-4">
+          集中時間やポモドーロ数は統計画面やカレンダー上で確認可能です。
         </p>
         <img
           src="/img/stats-screen.png"
@@ -125,7 +104,6 @@
         />
       </section>
 
-      <!-- 広告 3 -->
       <div class="my-8 text-center">
         <ins
           class="adsbygoogle"
@@ -140,9 +118,19 @@
         </script>
       </div>
 
-      <footer class="text-sm text-center text-gray-500 mt-10">
-        &copy; 2025 CalPom
-      </footer>
+      <p class="text-sm text-gray-600">
+        CalPomは、日々の努力を可視化することでモチベーションを高め、継続的な成長を支援します。
+      </p>
     </main>
+
+    <footer class="text-center text-sm text-gray-500 py-6 border-t">
+      <a href="./privacy.html" class="mx-2 text-blue-600 hover:underline"
+        >プライバシーポリシー</a
+      >
+      <a href="./terms.html" class="mx-2 text-blue-600 hover:underline"
+        >利用規約</a
+      >
+      <p class="mt-2">&copy; 2025 CalPom</p>
+    </footer>
   </body>
 </html>
